gateway/authswap-sasl-scram-none/gateway.yaml
apiVersion: platform.confluent.io/v1beta1
kind: Gateway
metadata:
  labels:
    app.kubernetes.io/name: confluent-for-kubernetes
    app.kubernetes.io/managed-by: kustomize
  name: confluent-gateway
spec:
  replicas: 3
  image:
    application: confluentinc/cpc-gateway:1.2.0-1-ubi9
    init: confluentinc/confluent-init-container:3.2.0
  streamingDomains:
    - name: mtls-kafka
      type: kafka
      kafkaCluster:
        bootstrapServers:
          - id: kafka-with-mtls
            endpoint: broker:9092
            tls:
              secretRef: kafka-tls # keystore should be present in the secret for mtls connection
        nodeIdRanges:
          - name: pool-1
            start: 1
            end: 3
  routes:
    - name: swap-sasl-scram-to-none-route
      endpoint: gateway.example.com:9595
      brokerIdentificationStrategy:
        type: port
      streamingDomain:
        name: mtls-kafka
        bootstrapServerId: kafka-with-mtls
      security:
        auth: swap
        client:
          authentication:
            type: scram
            scram:
              alterScramCredentials: true
              admin:
                secretRef: scram-admin-credentials
        cluster:
          authentication:
            type: none
  externalAccess:
    type: loadBalancer
    loadBalancer:
      domain: gateway.example.com
